# ferrocopg

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.rst  plan.md  pyproject.toml
.github/workflows/: 3rd-party-tests.yml  lint.yml  packages-pool.yml  packages-src.yml  tests.yml
crates/ferrocopg-postgres/: Cargo.toml
crates/ferrocopg-postgres/src/: bootstrap.rs  error.rs  lib.rs  model.rs  params.rs  session.rs
crates/ferrocopg-pq/: Cargo.toml
crates/ferrocopg-pq/src/: lib.rs
crates/ferrocopg-python/: Cargo.toml  pyproject.toml
crates/ferrocopg-python/python/ferrocopg_rust/: __init__.py
crates/ferrocopg-python/src/: adapt.rs  bootstrap.rs  lib.rs  python_helpers.rs
docs/: ferrocopg-dev.md
docs/lib/: libpq_docs.py  pg3_docs.py
psycopg/: pyproject.toml
psycopg/psycopg/: __init__.py  _acompat.py  _adapters_map.py  _cmodule.py  _column.py  _connection_base.py  _connection_info.py  _conninfo_attempts.py  _conninfo_attempts_async.py  _copy.py  _copy_async.py  _copy_base.py  _cursor_base.py  _dns.py  _encodings.py  _ferrocopg.py  _pipeline.py  _pipeline_base.py  _preparing.py  _py_transformer.py  _queries.py  _rmodule.py  _server_cursor.py  _server_cursor_async.py  _server_cursor_base.py  _struct.py  _transformer.py  _tstrings.py  _typeinfo.py  abc.py  client_cursor.py  connection.py  connection_async.py  conninfo.py  cursor.py  cursor_async.py  dbapi20.py  errors.py  generators.py  raw_cursor.py  (+4 more)
psycopg/psycopg/pq/: __init__.py  _debug.py  _pq_ctypes.py  _pq_ctypes.pyi  abc.py  misc.py  pq_ctypes.py
psycopg/psycopg/types/: array.py  bool.py  composite.py  datetime.py  enum.py  hstore.py  json.py  multirange.py  net.py  numeric.py  range.py  shapely.py  string.py  uuid.py
psycopg_binary/: pyproject.toml
psycopg_c/build_backend/: cython_backend.py  psycopg_build_ext.py
psycopg_c/psycopg_c/: _psycopg.pyi
psycopg_pool/psycopg_pool/: _acompat.py  _compat.py  _task.py  abc.py  base.py  null_pool.py  null_pool_async.py  pool.py  pool_async.py  sched.py  sched_async.py
tests/: README.rst  _test_connection.py  _test_copy.py  _test_cursor.py  acompat.py  adapters_example.py  conftest.py  constraints.txt  dbapi20.py  dbapi20_tpc.py  fix_crdb.py  fix_db.py  fix_faker.py  fix_pq.py  fix_proxy.py  test_adapt.py  test_column.py  test_concurrency.py  test_concurrency_async.py  test_connection.py  test_connection_async.py  test_connection_info.py  test_conninfo.py  test_conninfo_attempts.py  test_conninfo_attempts_async.py  test_copy.py  test_copy_async.py  test_cursor.py  test_cursor_async.py  test_cursor_common.py  test_cursor_common_async.py  test_cursor_raw.py  test_cursor_raw_async.py  test_cursor_server_async.py  test_dns.py  test_dns_srv.py  test_errors.py  test_ferrocopg_bootstrap.py  test_free_threading.py  test_generators.py  (+21 more)
tests/crdb/: test_adapt.py  test_connection.py  test_connection_async.py  test_copy.py  test_copy_async.py  test_cursor.py  test_cursor_async.py  test_no_crdb.py
tests/pool/: test_pool.py  test_pool_async.py  test_pool_common.py  test_pool_common_async.py  test_pool_null.py  test_pool_null_async.py  test_sched.py  test_sched_async.py
tests/pq/: test_async.py  test_copy.py  test_pgconn.py
tests/scripts/: bench-411.py  copytest.py  dectest.py  pipeline-demo.py  spiketest.py
tests/types/: test_array.py  test_bool.py  test_composite.py  test_datetime.py  test_enum.py  test_hstore.py  test_json.py  test_multirange.py  test_net.py  test_none.py  test_numeric.py  test_numpy.py  test_range.py  test_shapely.py  test_string.py  test_uuid.py
tools/: async_to_sync.py  bump_version.py  docker-compose.test-db.yml  pproxy_fix.py  test-db  update_backer.py  update_error_prefixes.py  update_errors.py  update_oids.py
tools/ci/: ci_test.sh  wheel_win32_before_build.bat
tools/ci/pg_config_vcpkg_stub/pg_config_vcpkg_stub/: __init__.py
tools/ci/pool-compat/: pyproject.toml
tools/isort-psycopg/: isort_psycopg.py
