[project]
name = "ferrocopg-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "psycopg",
    "psycopg-c",
    "psycopg-pool",
]

[dependency-groups]
dev = [
    "anyio >= 4.0",
    "ast-comments >= 1.1.2",
    "codespell >= 2.2",
    "cython-lint >= 0.16",
    "dnspython >= 2.1",
    "gevent",
    "mypy >= 1.19.0; implementation_name != 'pypy'",
    "pproxy >= 2.7",
    "pre-commit >= 4.0.1",
    "pytest >= 6.2.5",
    "pytest-cov >= 3.0",
    "pytest-randomly >= 3.5",
    "ruff >= 0.11.0",
    "shapely",
    "types-setuptools >= 57.4",
    "types-shapely >= 2.0",
    "wheel >= 0.37",
]

[build-system]
requires = ["setuptools>=49.2.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.uv.sources]
psycopg = { workspace = true }
psycopg-c = { path = "./psycopg_c", editable = false }
psycopg-binary = { path = "./psycopg_binary", package = false }
psycopg-pool = { workspace = true }

[tool.uv.workspace]
members = ["psycopg", "psycopg_pool"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error",
]
testpaths=[
    "tests",
]
# Note: On Travis they these options seem to leak objects
# log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
# log_level = "DEBUG"

[tool.coverage.run]
source = [
    "psycopg/psycopg",
    "psycopg_pool/psycopg_pool",
]
[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    '\.\.\.$',
]

[tool.mypy]
files = [
    "psycopg/psycopg",
    "psycopg_pool/psycopg_pool",
    "psycopg_c/psycopg_c",
    "tests",
]
warn_unused_ignores = true
show_error_codes = true
disable_bytearray_promotion = true
disable_memoryview_promotion = true
strict = true
exclude = '''(?x)(
    ^ docs/lib/.*\.py
    | tests/test_tstring\.py
)'''

# Don't use SQLite cache as it highlights Mypy concurrency issues.
# See https://github.com/python/mypy/issues/21136
# The issue is triggered by parallel mypy runs under pre-commit, setting
# the parameter here allows the use of the same cache both by pre-commit and
# every other Mypy usage.
#
# Check https://github.com/python/mypy/issues/13916 in the future to see
# if new ways to run mypy under pre-commit emerge.
sqlite_cache = false

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "polib",
    "shapely.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "scrap.*",
]
check_untyped_defs = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.codespell]
ignore-words-list = "alot,ans,ba,fo,te,erro,varning,perfor"
skip = "build,_build,.tox,.mypy_cache,.venv,pq.c,_psycopg.c,*.html"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["tests/test_tstring.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
exclude = ["tests/test_tstring.py"]
