[package]
name = "ferrocopg-postgres"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "ferrocopg backend layer built on rust-postgres"

[dependencies]
fallible-iterator = "0.2"
postgres = "0.19.13"
tokio-postgres = "0.7.17"
